# ezdoc-back

./: .env.example  .gitignore  AWS_LAMBDA_DEPLOYMENT.md  COGNITO_SETUP.md  QUICK_START.md  alembic.ini  deploy_lambda.sh  lambda_function.py  lambda_handler.py  makefile  pyproject.toml  requirements.txt  temp_requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0dd7e51067a5_add_name_and_created_by_user_id_to_.py  20311db1ab62_creating_template_model.py  65e39f5986b8_remove_template_fk_from_documents.py  8639cbf34748_make_data_column_nullable_in_templates.py  a1b2c3d4e5f6_add_users_table.py  ae1f2046480b_create_documents_table.py
app/: config.py  main.py
app/auth/: cognito.py  view_dependencies.py  view_token.py
app/db/: session.py
app/documents/: models.py  repositories.py  router.py  schemas.py
app/documents/utils/: __init__.py  document_processor.py  token_utils.py
app/templates/: __init__.py  document_processor.py  models.py  repositories.py  router.py  schemas.py  services.py
app/templates/utils/: document_processor.py
app/users/: models.py  repositories.py  router.py  schemas.py
